...
    <string name="sdk_configuration_success">SDK Configuration Updated</string>

    <!-- Home Screen -->
    <string name="bottom_navigation_accounts_item">Accounts</string>
    <string name="bottom_navigation_scan_item">QR Scanner</string>
    <string name="bottom_navigation_manual_entry_item">Manual Entry</string>
    <string name="bottom_navigation_more_item">More</string>

    <!-- Accounts Screen -->
    <string name="accounts_list_is_empty">Accounts List is Empty</string>
    <string name="accounts_list_is_empty_description">To add new account, scan the QR Code or enter the code that you will find on the website or on the activation letter.</string>
    <string name="generate_hotp">Generate HOTP</string>
    <string name="delete_account">Delete account</string>
...
    <string name="login_type">Login</string>
    <string name="transaction_type">Transaction</string>
    <string name="empty" />

    <!-- Manual Entry Screen -->
    <string name="please_enter_the_activation_code_that_was_provided_to_you">Please enter the activation code that was provided to you.</string>
    <string name="submit">Submit</string>

    <!-- More & Settings -->
    <string name="sdk_switch_config_title">Switch SDK Configuration</string>
    <string name="sdk_switch_config_subtitle">Authenticate to complete switch SDK configuration</string>
    <string name="sdk_switch_config_description">In order to switch SDK configuration to a User-Presence supported config, you need to authenticate with the given user presence mechanism</string>
    <string name="learn_more">Learn More</string>
    <string name="futurae_homepage">www.futurae.com</string>
    <string name="settings">Settings</string>
    <string name="configuration">Configuration</string>
    <string name="restore_accounts">Restore Accounts</string>
    <string name="delete_all_accounts">Delete All Accounts</string>
    <string name="delete_all_accounts_confirmation_dialog_title">Delete Accounts?</string>
    <string name="delete_all_accounts_confirmation_dialog_text">Please note that this action cannot be undone!</string>
    <string name="delete_all_accounts_confirmation_dialog_cancel_cta">Go Back</string>
...
    <string name="adaptive_threshold_dialog_description">Set the time threshold for re-using adaptive collections</string>
    <string name="adaptive_collections">Adaptive Collections</string>
    <string name="adaptive_enroll_to_collect">You must enroll an account before gathering collections</string>
    <string name="adaptive_no_collections_yet">No collections yet</string>
    <string name="adaptive_clear_collections">Clear collections</string>
    <string name="adaptive_overview_subtitle">Configure where adaptive will be used</string>
    <string name="integrity_check">Integrity Check</string>
    <string name="integrity_check_subtitle">Check your app and device integrity</string>
    <string name="sdk_configuration">SDK Configuration</string>
    <string name="sdk_pin">SDK Pin</string>
    <string name="sdk_change_pin">Change SDK Pin</string>
    <string name="sdk_change_pin_success">SDK pin has been changed successfully</string>
    <string name="sdk_change_pin_error">SDK pin change failed: %1$s</string>
...
    <string name="debug_uri_utils_auth_uri">Auth URI</string>
    <string name="debug_uri_utils_unknown_uri">Unknown URI</string>
    <string name="adaptive">Adaptive</string>
    <string name="adaptive_subtitle">Enable Adaptive capabilities</string>
    <string name="authentication">Authentication</string>
    <string name="migration">Migration</string>
    <string name="lock_mechanism">Lock Mechanism</string>
    <string name="lock_mechanism_subtitle">Select SDK lock Configuration</string>
    <string name="unlock_duration">Unlock Duration</string>
    <string name="unlock_duration_subtitle">Select SDK unlock duration</string>
    <string name="optional_configurations">Optional Configurations</string>
    <string name="optional_configurations_subtitle">Select additional SDK configurations</string>
    <string name="sdk_flag_skip_hw_sec">Skip Hardware Security</string>
...
